--- a/RocketContentMVC/RocketContentMVC.csproj
+++ b/RocketContentMVC/RocketContentMVC.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Nevoweb.RocketContentMVC</RootNamespace>
     <AssemblyName>RocketContentMVC</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -43,21 +43,46 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotNetNuke">
-      <HintPath>..\..\..\DNNrocket\API\_external\DotNetNuke.dll</HintPath>
+    <Reference Include="DotNetNuke, Version=9.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\DotNetNuke.dll</HintPath>
     </Reference>
-    <Reference Include="DotNetNuke.Web.Mvc">
-      <HintPath>..\..\..\DNNrocket\API\_external\DotNetNuke.Web.Mvc.dll</HintPath>
+    <Reference Include="DotNetNuke.Web.Client, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\DotNetNuke.Web.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetNuke.Web.Mvc, Version=9.13.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\DotNetNuke.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetNuke.Web.MvcPipeline, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\DotNetNuke.Web.MvcPipeline.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="RocketAppThemes, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\RocketAppThemes.dll</HintPath>
+    </Reference>
+    <Reference Include="RocketContentAPI, Version=1.1.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\RocketContentAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="RocketPortal, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\RocketPortal.dll</HintPath>
+    </Reference>
+    <Reference Include="Simplisity, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Websites\noforms2.rocketcds.me\Website\bin\Simplisity.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Mvc, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\DNNrocket\API\_external\System.Web.Mvc.dll</HintPath>
@@ -67,13 +92,13 @@
       <HintPath>..\..\..\bin\System.Web.Razor.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\MvcData.cs" />
@@ -82,6 +107,9 @@
     <Compile Include="Controllers\EditController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="PageContext\IPageContext.cs" />
+    <Compile Include="PageContext\MvcPageContext.cs" />
+    <Compile Include="PageContext\WebFormsPageContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -121,25 +149,9 @@
     <Folder Include="Installation\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\DNNrocketModules\RocketContentAPI\RocketContentAPI.csproj">
-      <Project>{f21c301c-6f9b-44d2-8fdd-ef8d4c95065c}</Project>
-      <Name>RocketContentAPI</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\DNNrocket\API\DNNrocketAPI.csproj">
       <Project>{2200f6c3-7d4b-4cdf-908f-dca37adfb121}</Project>
       <Name>DNNrocketAPI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\DNNrocket\RocketAppTheme\AppThemes.csproj">
-      <Project>{fee43e2d-5984-4c06-95c9-3732ec812e7b}</Project>
-      <Name>AppThemes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\DNNrocket\RocketPortal\RocketPortal.csproj">
-      <Project>{722bc7cd-3d90-41b4-87b1-b8750deaf4c9}</Project>
-      <Name>RocketPortal</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\DNNrocket\Simplisity\Simplisity.csproj">
-      <Project>{3375ee09-5417-44de-941f-f85d156a355a}</Project>
-      <Name>Simplisity</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
